# embedded-test-issue-40

./: Cargo.toml
.cargo/: config.toml
tests/: integration.rs
