[package]
edition = "2021"
name = "self-tests"
version = "0.1.0"
license = "MIT OR Apache-2.0"

# needed for each integration test
[[test]]
name = "integration"
harness = false

[dependencies]
embassy-executor = { version = "0.6.0", features = ["arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
embedded-test = { version = "0.4.0", features = ["embassy", "defmt"] }
# Change stm32g491re to your chip name, if necessary.
embassy-stm32 = { version = "0.1.0", features = [ "defmt", "time-driver-any", "stm32g474rc", "memory-x", "unstable-pac", "exti"]  }
embassy-sync = { version = "0.6.0", features = ["defmt"] }
embassy-time = { version = "0.3.2", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-usb = { version = "0.3.0", features = ["defmt"] }
embassy-futures = { version = "0.1.0"}
usbd-hid = "0.8.1"

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "1.0.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
heapless = { version = "0.8", default-features = false }
static_cell = "2.0.0"
defmt-test = "0.3"

[dev-dependencies]


[patch.crates-io]
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev="7648d42b7f23a2caad29ed6e16123b088ccdc8b5" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev="7648d42b7f23a2caad29ed6e16123b088ccdc8b5" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev="7648d42b7f23a2caad29ed6e16123b088ccdc8b5" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev="7648d42b7f23a2caad29ed6e16123b088ccdc8b5" }
embassy-usb = { git = "https://github.com/embassy-rs/embassy", rev="7648d42b7f23a2caad29ed6e16123b088ccdc8b5" }
embedded-test = { git = "https://github.com/probe-rs/embedded-test.git", rev="784f62c34f87b52de221b6ab6c8390a5655fdaa4" }
